# picard

./: .envrc  Cargo.toml  README.md  index.html
client/: Cargo.toml  index.html
public_html/: index.html
server/: Cargo.toml
server/src/: handlers.rs  lib.rs  main.rs  models.rs
shared/: Cargo.toml
src/: filters.rs  lib.rs  main.rs
