[package]
name = "picard"
version = "1.0.0"
authors = ["Sven Strittmatter <ich@weltraumschaf.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.3"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
serde = "1.0"
serde_derive = "1.0"
