[package]
name = "picard"
version = "1.0.0"
authors = ["Sven Strittmatter <ich@weltraumschaf.de>"]
repository = "https://github.com/Weltraumschaf/picard"
readme = "README.md"
license = "http://weltraumschaf.de/the-beer-ware-license.txt"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

