[package]
name = "clinet"
version = "1.0.0"
authors = ["Sven Strittmatter <ich@weltraumschaf.de>"]
repository = "https://github.com/Weltraumschaf/picard"
readme = "README.md"
license = "http://weltraumschaf.de/the-beer-ware-license.txt"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
seed = "^0.6.0"
wasm-bindgen = "^0.2.50"
# For serialization, eg sending requests to a server. Otherwise, not required.
serde = { version = "^1.0.85", features = ['derive'] }
futures = "^0.3.4"

shared = { path = "../shared"}

[dev-dependencies]
wasm-bindgen-test = "0.2.50" # NOTE: keep in sync with wasm-bindgen version

[profile.release]  # Attempts to minimize file size
lto = true
opt-level = 'z'
